# ginco_bridge

./: .devcontainer.json  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/app/: device.cpp  device.hpp  network.cpp  network.hpp
main/defines/: events.h  ginco_types.cpp  ginco_types.hpp
main/defines/protobuf/: ginco.pb-c.c  ginco.pb-c.h  ginco.proto  varint_decode.c  varint_decode.h
main/drivers/: can.cpp  can.hpp  config.cpp  config.hpp  ip_interface.cpp  mqtt.cpp  mqtt.hpp  nic.cpp  nic.hpp  socket.cpp  socket.hpp  upgrade.cpp  wifi.c  wifi_sta.cpp  wifi_utils.cpp
main/drivers/protobuf/: ginco.pb-c.c  ginco.proto
main/inc/: can_driver.h  config_driver.h  connection_manager.h  device.h  event_list.h  ginco.pb-c.h  http_client.h  input.h  ip_interface.h  mqtt_module.h  socket_listener.h  upgrade.h  varint_decode.h  wifi_driver.h  wifi_sta.h  wifi_utils.h
main/modules/: connection_manager.cpp  device.cpp  http_client.cpp  input.cpp  mqtt.cpp  mqtt.hpp  output.cpp  socket_listener.cpp  switch_co.hpp  upgrade.cpp  upgrade.hpp
main/threads/: can_thread.cpp  can_thread.hpp  ginco_thread.cpp  ginco_thread.hpp  network_thread.cpp  network_thread.hpp  tasklist.hpp
